client/src/assets/_document.scss
// NOTE: this file is inlined directly in index.html so the background color is set immediately
// to avoid a white flash when loading the page the first time

@import "./colors";

* {
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
}

html,
body {
    width: 100%;
    height: 100%;
}

body {
    background-color: $color-bg;
    margin: 0;
}

body,
p,
button,
input {
    font-size: 16px;
}

a,
a:visited {
    color: $color-primary-light;
}

h1,
h2,
h3,
h4,
h5 {
    margin: 1rem 0;
    color: #ccc;

    &:first-child {
        margin-top: 0;
    }
}

p,
ul,
label,
input,
select {
    color: #aaa;
}

p,
ul {
    margin: 1rem 0;
}

ul {
    margin-bottom: 1.2rem;
}

li {
    margin-bottom: 0.2rem;
}

select {
    background-color: #222;
    border: 1px solid #555;
    padding: 0.4rem;
    border-radius: 0.4rem;
}

.prevent-overscroll {
    overscroll-behavior: contain;
}

.bi {
    vertical-align: middle;
}

